GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :
       
    - 1.23alpha3 :
    
        - Data dumper improved : it's faster and now datas are correctly 
          escaped.
        
        - The URL to the logo displayed in the CGI scripts is configurable.
        
    - 1.23alpha2 :
    
        - Fixed edpykota --prototype with balance.
        
        - Major rewrite of the IPP message parsing code to definitely
          fix the job-originating-hostname IPP attribute problem.
        
    - 1.23alpha1 :   
    
        - Sets current username to the user CUPS runs as instead of "root"
          when printing test pages from CUPS' web interface (because
          the username is empty in this case).
          
        - Fix for strange values in job-originating-hostname
        
    - 1.22 : 
    
        - Big improvements to the documentation.
        
    - 1.22beta :
    
        - Improved stability in pykotme and pykotme.cgi.
        
        - Fixed a permission problem in pykotme and pykosd.
        
        - Fixed an inconsitency between SQL and LDAP backends'
          behavior in edpykota.
          
        - Improved stability and allowed tracebacks in CGI scripts.
        
        - Improved pykotme.cgi
          
    - 1.22alpha8 :
    
        - Fixed history retrieval for nonexisting printers or users.
        
        - Clicking on the billing code in printquota.cgi's job history
          now shows all jobs matching this billing code.
          
        - Fixed the dump in CUPS' page_log format which didn't
          dump the oldest entry.
          
        - The data dumper now accepts billingcode= and hostname= as
          filters when dumping the job history.